manifests/exercises/log-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: logs-dir
          persistentVolumeClaim:
            claimName: log-output-claim
        - name: config
          configMap:
            name: log-config-map
            items:
            - key: "information.txt"
              path: "information.txt"
      containers:
        - name: log-writer
          image: benpp/log-writer:1.10
          volumeMounts:
            - name: logs-dir
              mountPath: /app/logs
        - name: log-server
          image: benpp/log-server:4.1
          volumeMounts:
            - name: logs-dir
              mountPath: /app/logs
            - name: config
              mountPath: /app/data
              readOnly: true
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8080
